added deployment parameters in package.json

--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "myapp",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://sriramnv.github.io/stickNotes",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "appwrite": "^16.0.2",
+    "gh-pages": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
